--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node tests/tests.js",
+    "test": "mocha",
     "build": "npx webpack"
   },
   "repository": {
@@ -26,6 +26,7 @@
     "moment-timezone": "^0.5.26"
   },
   "devDependencies": {
+    "mocha": "^8.3.2",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.12"
   }
