--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
     "mocha": "^8.3.2",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
