--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "tests": "mocha \"tests/mocha/**/*.js\"",
+    "test": "mocha \"tests/mocha/**/*.js\"",
     "build": "npx webpack --env.NODE_ENV=local",
     "build-production": "npx webpack --env.NODE_ENV=production"
   },
