--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Production build
+dist-prod
 # Logs
 logs
 *.log
@@ -81,7 +83,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist-dev
+
 
 # Gatsby files
 .cache/
