--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Production build
-dist-prod
 # Logs
 logs
 *.log
@@ -83,7 +81,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-
+dist-dev
 
 # Gatsby files
 .cache/
