--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore prod dist
+dist-prod
+
 # Logs
 logs
 *.log
@@ -81,7 +84,6 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist-dev
 
 # Gatsby files
 .cache/
