Updated script commands

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "test": "mocha \"tests/mocha/**/*.js\"",
-    "build": "npx webpack --env.NODE_ENV=local",
-    "build-production": "npx webpack --env.NODE_ENV=production"
+    "dev": "npx webpack --env.NODE_ENV=local",
+    "build": "npx webpack --env.NODE_ENV=production"
   },
   "repository": {
     "type": "git",
