--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
     "predev": "npm test",
     "dev": "npx webpack --env.NODE_ENV=local",
-    "prebuild": "npm test",
-    "build": "npx webpack --env.NODE_ENV=production"
+    "prebuild": "npm-run-all test lint",
+    "build": "npx webpack --env.NODE_ENV=production",
+    "lint": "esw webpack.config.* src libs --color"
   },
   "repository": {
     "type": "git",
@@ -36,8 +37,12 @@
     "@babel/register": "7.13.8",
     "babel-loader": "8.2.2",
     "css-loader": "^5.2.0",
+    "eslint": "7.21.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-watch": "7.0.0",
     "file-loader": "^6.2.0",
     "mocha": "^8.3.2",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
