--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "typescript": "^4.3.2",
     "webpack": "^5.30.0",
     "webpack-cli": "^3.3.12"
   }
