--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "moment-timezone": "^0.5.26"
   },
   "devDependencies": {
-    "@babel/cli": "7.13.0",
+    "@babel/cli": "^7.12.1",
     "@babel/core": "7.13.8",
     "@babel/node": "^7.13.0",
     "@babel/preset-env": "7.13.8",
@@ -46,6 +46,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
     "webpack": "^5.30.0",
     "webpack-cli": "^3.3.12"
