--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,11 @@
 {
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
   "root": true,
   "extends": ["eslint:recommended", "plugin:import/errors", "plugin:import/warnings"],
   "parserOptions": {
