--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+    "test": "mocha -r ts-node/register src/**/*.ts",
     "predev": "npm test",
     "dev": "npx webpack --env.NODE_ENV=local",
     "prebuild": "npm-run-all test lint",
     "build": "npx webpack --env.NODE_ENV=production",
-    "lint": "esw webpack.config.* src libs --color"
+    "lint": "esw webpack.config.* src --color"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,8 @@
   "homepage": "https://github.com/richardaspinall/chrome-timezone-converter#readme",
   "dependencies": {
     "moment-locales-webpack-plugin": "^1.1.0",
-    "moment-timezone": "^0.5.26"
+    "moment-timezone": "^0.5.26",
+    "ts-node": "^10.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -35,6 +36,7 @@
     "@babel/node": "^7.13.0",
     "@babel/preset-env": "7.13.8",
     "@babel/register": "7.13.8",
+    "@types/mocha": "^8.2.2",
     "babel-loader": "8.2.2",
     "css-loader": "^5.2.0",
     "eslint": "7.21.0",
