--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "time-zone-converter",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "A Chrome extension that converts times to preferred Time Zone",
-  "main": "main.js",
+  "main": "main.ts",
   "directories": {
     "doc": "docs",
     "test": "tests"
